--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -84,21 +84,37 @@
             android:layout_below="@id/registrationPasswordField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/registration_page_person"
+            android:text="@string/registration_page_type"
             style="@style/default.layout.text"/>
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_below="@id/registrationPersonNameLabel"
+        <RadioGroup
+            android:id="@+id/registrationType"
+            android:layout_below="@id/registrationPasswordField"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:inputType="textPersonName"
-            tools:ignore="TouchTargetSizeCheck"
-            style="@style/default.layout.field"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <RadioButton
+                android:id="@+id/registrationTypeBusiness"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:text="@string/registration_page_type_business"
+                android:onClick="onRadioButtonClicked"
+                style="@style/default.layout.radiobutton"/>
+
+            <RadioButton
+                android:id="@+id/registrationTypePersonal"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:text="@string/registration_page_type_personal"
+                android:onClick="onRadioButtonClicked"
+                style="@style/default.layout.radiobutton"/>
+        </RadioGroup>
 
         <Button
             android:id="@+id/registrationButtonSave"
-            android:layout_below="@id/editTextTextPersonName"
+            android:layout_below="@id/registrationType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/registration_page_save"
