--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primary">#FF650199</color>
     <color name="secondary">#FF9D75B1</color>
     <color name="success">#FF78EC6E</color>
+    <color name="error">#8FFFAEAE</color>
 </resources>
