--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -43,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             tools:ignore="TouchTargetSizeCheck"
+            android:inputType="text"
             style="@style/default.layout.field"/>
 
         <TextView
