--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             tools:ignore="TouchTargetSizeCheck"
-            android:inputType="text"
+            android:inputType="textPersonName"
             style="@style/default.layout.field"/>
 
         <TextView
@@ -96,22 +96,27 @@
             android:orientation="vertical"
             android:gravity="center">
 
-            <RadioButton
-                android:id="@+id/registrationTypePhone"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:text="@string/registration_page_type_phone"
-                android:inputType="text"
-                style="@style/default.layout.radiobutton"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="15dp">
+                <RadioButton
+                    android:id="@+id/registrationTypePhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:text="@string/registration_page_type_phone"
+                    android:inputType="text"
+                    style="@style/default.layout.radiobutton"/>
 
-            <RadioButton
-                android:id="@+id/registrationTypeInternet"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:inputType="text"
-                android:text="@string/registration_page_type_internet"
-                style="@style/default.layout.radiobutton"/>
-
+                <RadioButton
+                    android:id="@+id/registrationTypeInternet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:inputType="text"
+                    android:text="@string/registration_page_type_internet"
+                    style="@style/default.layout.radiobutton"/>
+            </LinearLayout>
             <RadioButton
                 android:id="@+id/registrationTypeCombo"
                 android:layout_width="wrap_content"
