--- a/app/src/main/res/layout/registration_screen.xml
+++ b/app/src/main/res/layout/registration_screen.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_height="match_parent"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -100,6 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_horizontal"
                 android:layout_marginBottom="15dp">
                 <RadioButton
                     android:id="@+id/registrationTypePhone"
@@ -116,14 +117,16 @@
                     android:inputType="text"
                     android:text="@string/registration_page_type_internet"
                     style="@style/default.layout.radiobutton"/>
+
+                <RadioButton
+                    android:id="@+id/registrationTypeCombo"
+                    style="@style/default.layout.radiobutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:inputType="text"
+                    android:text="@string/registration_page_type_combo" />
+
             </LinearLayout>
-            <RadioButton
-                android:id="@+id/registrationTypeCombo"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
-                android:inputType="text"
-                android:text="@string/registration_page_type_combo"
-                style="@style/default.layout.radiobutton"/>
         </RadioGroup>
 
         <Button
@@ -135,5 +138,6 @@
             android:text="@string/registration_page_save"
             tools:ignore="TouchTargetSizeCheck"
             style="@style/default.layout.button.primary"/>
+
     </LinearLayout>
 </ScrollView>
