--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,6 +38,15 @@
         <item name="android:layout_marginBottom">15dp</item>
     </style>
 
+    <style name="default.layout.textlink" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:fontFamily">@font/baloo_bhai_2</item>
+        <item name="android:textSize">20sp</item>
+        <item name="lineHeight">20dp</item>
+        <item name="android:layout_marginTop">30dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+    </style>
+
     <style name="default.layout.button.primary" parent="TextAppearance.AppCompat.Button">
         <item name="android:backgroundTint">@color/primary</item>
         <item name="android:textColor">@color/white</item>
