implementações tela de troca de senha

--- a/app/src/main/res/layout/recover_password.xml
+++ b/app/src/main/res/layout/recover_password.xml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragments.recoverPassword.RecoverPassword">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.fiap.vivo.ui.fragments.registrationScreen.RegistrationScreen">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/recoverPasswordCpfCnpj"
+            style="@style/default.layout.title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/registrationPhoneLabel"
+            android:layout_below="@id/registrationEmailField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registration_page_phone"
+            android:inputType="phone"
+            style="@style/default.layout.text"/>
+
+        <EditText
+            android:id="@+id/registrationPhoneField"
+            android:layout_below="@id/registrationPhoneLabel"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:inputType="textEmailAddress"
+            tools:ignore="TouchTargetSizeCheck"
+            style="@style/default.layout.field"/>
+
+
+    </LinearLayout>
+
+</ScrollView>
