ajusta recover page

--- a/app/src/main/res/layout/recover_password.xml
+++ b/app/src/main/res/layout/recover_password.xml
@@ -25,7 +25,7 @@
             android:layout_below="@id/registrationEmailField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/registration_page_phone"
+            android:text="@string/recover_password_page_pin"
             android:inputType="phone"
             style="@style/default.layout.text"/>
 
@@ -38,7 +38,20 @@
             tools:ignore="TouchTargetSizeCheck"
             style="@style/default.layout.field"/>
 
+        <Button
+            android:id="@+id/registrationReSend"
+            android:layout_below="@id/registrationPhoneField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recover_password_page_resend"
+            style="@style/default.layout.button.primary"/>
 
+        <Button
+            android:id="@+id/registrationConfirm"
+            android:layout_below="@id/registrationReSend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recover_password_page_confirm"
+            style="@style/default.layout.button.primary"/>
     </LinearLayout>
-
 </ScrollView>
