--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.Vivo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/secondary</item>
+        <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -48,7 +48,7 @@
     </style>
 
     <style name="default.layout.button.primary" parent="TextAppearance.AppCompat.Button">
-        <item name="android:backgroundTint">@color/primary</item>
+        <item name="android:background">@drawable/button_primary_background</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:paddingVertical">8dp</item>
@@ -56,13 +56,13 @@
         <item name="android:layout_marginVertical">30dp</item>
     </style>
 
-    <style name="default.layout.field" parent="TextAppearance.AppCompat.Button">
+    <style name="default.layout.field" parent="TextAppearance.AppCompat.Caption">
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:paddingHorizontal">16dp</item>
         <item name="android:paddingVertical">4dp</item>
     </style>
 
-    <style name="default.layout.radiobutton" parent="TextAppearance.AppCompat.Button">
+    <style name="default.layout.radiobutton" parent="TextAppearance.AppCompat.Widget.Button">
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:paddingStart">4dp</item>
         <item name="android:paddingEnd">16dp</item>
