ajustes no layout

--- a/app/src/main/res/layout/change_password_screen.xml
+++ b/app/src/main/res/layout/change_password_screen.xml
@@ -13,6 +13,14 @@
         tools:context="com.fiap.vivo.ui.fragments.changePasswordScreen.ChangePasswordScreen">
 
         <TextView
+            android:id="@+id/changePasswordTitle"
+            style="@style/default.layout.title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="@string/change_password_page_title" />
+
+        <TextView
             android:id="@+id/changePassword"
             style="@style/default.layout.title"
             android:layout_width="match_parent"
@@ -24,8 +32,7 @@
             android:id="@+id/enterNewPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Entre com a nova senha"
-            android:inputType="phone"
+            android:text="@string/change_password_new"
             style="@style/default.layout.text"/>
 
         <EditText
@@ -40,8 +47,7 @@
             android:id="@+id/enterNewPassword1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Confirme a nova senha"
-            android:inputType="phone"
+            android:text="@string/change_password_new_confirm"
             style="@style/default.layout.text"/>
 
         <EditText
