--- a/app/src/main/res/layout/recover_password.xml
+++ b/app/src/main/res/layout/recover_password.xml
@@ -13,6 +13,14 @@
         tools:context="com.fiap.vivo.ui.fragments.registrationScreen.RegistrationScreen">
 
         <TextView
+            android:id="@+id/registrationPageTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recover_password_page_title"
+            android:layout_marginTop="60dp"
+            style="@style/default.layout.title"/>
+
+        <TextView
             android:id="@+id/recoverPasswordCpfCnpj"
             style="@style/default.layout.title"
             android:layout_width="match_parent"
@@ -21,30 +29,40 @@
             android:textAlignment="center" />
 
         <TextView
-            android:id="@+id/registrationPhoneLabel"
-            android:layout_below="@id/registrationEmailField"
+            android:id="@+id/recoverPasswordPhoneLabel"
+            android:layout_below="@id/recoverPasswordCpfCnpj"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/recover_password_page_pin"
             android:inputType="phone"
             style="@style/default.layout.text"/>
 
-        <EditText
-            android:id="@+id/registrationPhoneField"
-            android:layout_below="@id/registrationPhoneLabel"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:inputType="textEmailAddress"
-            tools:ignore="TouchTargetSizeCheck"
-            style="@style/default.layout.field"/>
-
-        <Button
-            android:id="@+id/registrationReSend"
-            android:layout_below="@id/registrationPhoneField"
+        <LinearLayout
+            android:id="@+id/recoverPasswordSetCode"
+            android:layout_below="@id/recoverPasswordPhoneLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/recover_password_page_resend"
-            style="@style/default.layout.button.primary"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <EditText
+                android:id="@+id/registrationPhoneField"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:ems="20"
+                android:inputType="textEmailAddress"
+                tools:ignore="TouchTargetSizeCheck"
+                style="@style/default.layout.field"/>
+
+            <Button
+                android:id="@+id/registrationReSend"
+                android:layout_below="@id/registrationPhoneField"
+                android:layout_width="wrap_content"
+                android:layout_height="44dp"
+                android:ems="10"
+                android:text="@string/recover_password_page_resend"
+                style="@style/default.layout.button.line.primary"/>
+        </LinearLayout>
 
         <Button
             android:id="@+id/registrationConfirm"
