--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -56,6 +56,14 @@
         <item name="android:layout_marginVertical">30dp</item>
     </style>
 
+    <style name="default.layout.button.line.primary" parent="TextAppearance.AppCompat.Button">
+        <item name="android:background">@drawable/button_primary_background</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:paddingVertical">0dp</item>
+        <item name="android:radius">10dp</item>
+    </style>
+
     <style name="default.layout.field" parent="TextAppearance.AppCompat.Caption">
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:paddingHorizontal">16dp</item>
