Atualiza nome do id dos campos, ajusta layout, add info do cpf na tela

--- a/app/src/main/res/layout/change_password_screen.xml
+++ b/app/src/main/res/layout/change_password_screen.xml
@@ -14,55 +14,60 @@
 
         <TextView
             android:id="@+id/changePasswordTitle"
-            style="@style/default.layout.title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="@string/change_password_page_title" />
+            android:text="@string/change_password_page_title"
+            style="@style/default.layout.title"/>
 
         <TextView
-            android:id="@+id/changePassword"
-            style="@style/default.layout.title"
+            android:id="@+id/changePasswordCpfCnpj"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            style="@style/default.layout.title"/>
 
         <TextView
-            android:id="@+id/enterNewPassword"
+            android:id="@+id/changePasswordNewLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/changePasswordCpfCnpj"
             android:text="@string/change_password_new"
             style="@style/default.layout.text"/>
 
         <EditText
-            android:id="@+id/newPassword"
+            android:id="@+id/changePasswordNewField"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:layout_below="@id/changePasswordNewLabel"
             android:inputType="textPassword"
             tools:ignore="TouchTargetSizeCheck"
             style="@style/default.layout.field"/>
 
         <TextView
-            android:id="@+id/enterNewPassword1"
+            android:id="@+id/changePasswordNewConfirmLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/changePasswordNewField"
             android:text="@string/change_password_new_confirm"
             style="@style/default.layout.text"/>
 
         <EditText
-            android:id="@+id/newPassword1"
+            android:id="@+id/changePasswordNewConfirmField"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:layout_below="@id/changePasswordNewConfirmLabel"
             android:inputType="textPassword"
             tools:ignore="TouchTargetSizeCheck"
             style="@style/default.layout.field"/>
 
         <Button
-            android:id="@+id/buttonSave"
+            android:id="@+id/changePasswordButtonSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Salvar "
+            android:layout_below="@id/changePasswordNewConfirmField"
+            android:text="@string/change_password_new_save"
             style="@style/default.layout.button.primary"/>
 
     </LinearLayout>
