--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -77,5 +77,6 @@
         <item name="android:paddingVertical">4dp</item>
         <item name="android:textSize">16dp</item>
         <item name="android:layout_marginHorizontal">10dp</item>
+        <item name="android:textAlignment">center</item>
     </style>
 </resources>
