ajustes no envio do sms, generate random e layout recover password

--- a/app/src/main/res/layout/recover_password.xml
+++ b/app/src/main/res/layout/recover_password.xml
@@ -46,21 +46,21 @@
 
             <EditText
                 android:id="@+id/recoverPasswordPhoneField"
+                style="@style/default.layout.field"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
+                android:layout_height="match_parent"
                 android:ems="14"
                 android:inputType="textEmailAddress"
-                tools:ignore="TouchTargetSizeCheck"
-                style="@style/default.layout.field"/>
+                tools:ignore="TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/recoverPasswordReSend"
+                style="@style/default.layout.button.line.primary"
+                android:layout_width="157dp"
+                android:layout_height="match_parent"
                 android:layout_below="@id/recoverPasswordPhoneField"
-                android:layout_width="wrap_content"
-                android:layout_height="44dp"
                 android:ems="6"
-                android:text="@string/recover_password_page_resend"
-                style="@style/default.layout.button.line.primary"/>
+                android:text="@string/recover_password_page_resend" />
         </LinearLayout>
 
         <Button
